--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <ul class="navbar-nav">
         <li class="nav-item dropdown" id="drop2">
           <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Dropdown 
           </button>
           <ul class="dropdown-menu " id="dropm2">
             <li><a class="dropdown-item" href="#">Action</a></li>
@@ -65,7 +65,9 @@
           <a class="nav-link " href="#">Contact</a>
         </li>
       </ul>
+      
     </div>
+    <button type="button" class="btn btn-primary justify-content-end rounded-pill">Get Started</button>
         </div>
     </nav>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
