--- a/index.html
+++ b/index.html
@@ -9,32 +9,33 @@
     <title>Mydesgin</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg align-items-center m-2">
+        <div class="shadow container-fluid container-xl d-flex position-relative bg-body-tertiary rounded-pill p-4 align-items-center">
            <a class="navbar-brand" href="#">Mydesign</a>
-               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
+               <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
+      <ul class="navbar-nav ">
+
+        <li class="nav-item mx-1">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-1">
           <a class="nav-link" href="#">About</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-1">
           <a class="nav-link" href="#">Features</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-1">
           <a class="nav-link " href="#">Servuce</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-1">
           <a class="nav-link " href="#">Pricing</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-1">
 
               <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
       <ul class="navbar-nav">
         <li class="nav-item dropdown" id="drop1">
-          <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn dropdown-toggle" id="dropmenu1" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </button>
           <ul class="dropdown-menu " id="dropm1">
@@ -54,7 +55,7 @@
         </li>
       </ul>
     </div>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item mx-1" href="#">Something else here</a></li>
           </ul>
         </li>
       </ul>
