--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Mydesgin</title>
 </head>
 <body>
+  <!--nvbar section-->
     <nav class="navbar navbar-expand-lg align-items-center m-2">
         <div class="shadow container-fluid container-xl d-flex position-relative bg-body-tertiary rounded-pill p-4 align-items-center">
            <a class="navbar-brand" href="#">Mydesign</a>
@@ -71,6 +72,29 @@
     <button type="button" class="btn btn-primary justify-content-end rounded-pill">Get Started</button>
         </div>
     </nav>
+    <!-- Navbar end-->
+<!-- Main Section -->
+    <div class="main">
+      <section class="myname" id="myname">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="row justify-content-center">
+                <div class="bg-primary col-3 rounded-pill">
+                 <i class="bi bi-star-fill">
+                  <span>Award winnig agency</span>
+                </i>
+                </div>
+                <h1 class="" >Transforming Ideas Into Digital Reality</h1>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </section>
+    </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS (link it AFTER Bootstrap JS) -->
     <script src="script.js"></script>
