--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!--nvbar section-->
-    <nav class="navbar navbar-expand-lg align-items-center m-2">
+    <nav class="navbar navbar-expand-lg align-items-center m-2  d-flex fixed-top">
         <div class="shadow container-fluid container-xl d-flex position-relative bg-body-tertiary rounded-pill p-4 align-items-center">
            <a class="navbar-brand" href="#">Mydesign</a>
                <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
@@ -80,13 +80,40 @@
           <div class="row justify-content-center">
             <div class="col-lg-8">
               <div class="row justify-content-center">
-                <div class="bg-primary col-3 rounded-pill">
+                <div class="headera bg-primary rounded-pill">
                  <i class="bi bi-star-fill">
-                  <span>Award winnig agency</span>
+                  <span id="spaw">Award winnig agency</span>
                 </i>
                 </div>
-                <h1 class="" >Transforming Ideas Into Digital Reality</h1>
-
+                <h1 class="text-center mb-2" id="headingtext">Transforming Ideas Into Digital Reality</h1>
+                <p class="description text-center mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                <div class=" headerb row justify-content-center">
+                  <button type="button" class="btn btn-primary col-3 mx-1" id="gets">Get Started Today</button>
+                  <button type="button" class="btn col-3 mx-1" id="view">View our work</button>
+                </div>
+                <div class="tro row justify-content-center">
+                  <div class="torphy1 justify-content-center bg-white">
+                    <div class="torphy-item"><i class="bi bi-trophy"></i></div>
+                    <div class="award">
+                      <span class="award-item1">85+</span>
+                      <span class="award-item2">Aword Won</span>
+                    </div>
+                  </div>
+                  <div class="torphy1  justify-content-center bg-white">
+                    <div class="torphy-item"><i class="bi bi-trophy"></i></div>
+                    <div class="award">
+                      <span class="award-item1">500</span>
+                      <span class="award-item2">Happy Clients</span>
+                    </div>
+                  </div>
+                  <div class="torphy1  justify-content-center bg-white">
+                    <div class="torphy-item"><i class="bi bi-trophy"></i></div>
+                    <div class="award">
+                      <span class="award-item1">25+</span>
+                      <span class="award-item2">Countries</span>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -94,8 +121,34 @@
         </div>
 
       </section>
+    <!--End Home -->
+    <!--Start About -->
+    <section class="About">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="pic col-lg-5">
+            <div class="mimg"><img src="about-14 (1).webp" alt=""></div>
+            <div class="simg row justify-content-center">
+              <img class="img2" src="about-7.webp" alt="">
+              <img class="img3" src="about-14.webp" alt="">
+            </div>
+          </div>
+          <div class="whoabout col-lg-7">
+            <div class="content-section">
+              <div class="seintro">
+                <div class="seintro-h">who are you</div>
+              </div>
+              <div class="semid"></div>
+              <div class="selast"></div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
     </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <!-- Custom JS (link it AFTER Bootstrap JS) -->
     <script src="script.js"></script>
 </body>
