--- a/index.html
+++ b/index.html
@@ -127,25 +127,141 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="pic col-lg-5">
-            <div class="mimg"><img src="about-14 (1).webp" alt=""></div>
+            <div class="mimg"><img class="mimgm" src="about-14 (1).webp" alt=""></div>
             <div class="simg row justify-content-center">
               <img class="img2" src="about-7.webp" alt="">
               <img class="img3" src="about-14.webp" alt="">
             </div>
           </div>
+          
           <div class="whoabout col-lg-7">
             <div class="content-section">
               <div class="seintro">
-                <div class="seintro-h">who are you</div>
+                <div class="seintro-h col-2 text-center">Who Are You</div>
               </div>
-              <div class="semid"></div>
-              <div class="selast"></div>
+              <div class="semid">
+                <h2 class="semid-h1">Building tomorrow's solutions with proven expertise and innovation</h2>
+                <p class="semid-p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt.</p>
+              </div>
+              <div class="selast col justify-content-center">
+                <div class="selast1 col justify-content-start">
+                    <div class="selast-bi"><i class="bi bi-graph-up-arrow"></i></div>
+                    <div class="selast-co mx-2 row">
+                      <h3 class="">Strategic Growth</h3>
+                      <p class="semid-p">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                </div>
+                    <div class="selast1 col justify-content-start">
+                    <div class="selast-bi"><i class="bi bi-people-fill"></i></div>
+                    <div class="selast-co mx-2 row">
+                      <h3 class="">Expert Team</h3>
+                      <p class="semid-p">Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+                <div class="selast2 justify-content-start">
+                  <div class=""><button class=" learnb btn">Learn More About Us</button></div>
+                    <div class="mx-2 row">
+                      <p class="text-body-tertiary">Call us directly:</p>
+                      <h5 class="">+249966525580</h5>
+                    </div>
+                </div>
+              </div>
+            </div>
+
             </div>
           </div>
+            <div class="metrix container">
+              <div class="metrix1 row text-center">
+                <div class="metrixc">
+                  <div class="metrixh">450+</div>
+                  <div class="mertixp">Successful Projects</div>
+                </div>
+                <div class="metrixc">
+                  <div class="metrixh">99.8%</div>
+                  <div class="mertixp">Customer Satisfaction</div>
+                </div>
+                <div class="metrixc">
+                  <div class="metrixh">650+</div>
+                  <div class="mertixp">Team Customer </div>
+                </div>
+                <div class="metrixc">
+                  <div class="metrixh">24/7</div>
+                  <div class="mertixp">Customer Supoort</div>
+                </div>
+              </div>
         </div>
-
       </div>
     </section>
+        <!--End About -->
+        <!--Start Service -->
+        <section class="Service container">
+          <div class="title container">
+            <h1 class="serh">Service</h1>
+            <p class="serp">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+          </div>
+          <div class="row">
+            <div class="ser col-lg-6">
+              <div class="serf">
+              <div class="serft">Most Pupular</div>
+                <div class="serfi">
+                  <i class="bi bi-rocket-takeoff"></i>
+                </div>
+                <h1 class="h1s">Automated Workflows</h1>
+                <p class="p1s">Streamline your business processes with intelligent automation that saves time and reduces human error. Perfect for scaling teams</p>
+                <div class="serfe">
+                  <div class="serfe1">
+                    <i class="bi bi-check-circle-fill"></i>
+                    <span>24/7 Processing</span>
+                  </div>
+                                    <div class="serfe1">
+                    <i class="bi bi-check-circle-fill"></i>
+                    <span>Smart Analytics</span>
+                  </div>
+                                    <div class="serfe1">
+                    <i class="bi bi-check-circle-fill"></i>
+                    <span>Easy Integration</span>
+                  </div>
+                </div>
+                <a href="" class="btng btn btn-primary">Get Started Free</a>
+              </div>
+            </div>
+
+            <div class="serb col-lg-6">
+              <div class="serff">
+                <div class="serfff">
+                  <i class="bi bi-shield-check"></i>
+                </div>
+                <h1 class="h1s">Automated Workflows</h1>
+                <p class="p1s">Enterprise-grade security measures to protect your data and maintain compliance standards</p>
+              </div>
+                            <div class="serff">
+                <div class="serfff">
+                  <i class="bi bi-shield-check"></i>
+                </div>
+                <h1 class="h1s">Automated Workflows</h1>
+                <p class="p1s">Enterprise-grade security measures to protect your data and maintain compliance standards</p>
+              </div>
+                            <div class="serff">
+                <div class="serfff">
+                  <i class="bi bi-shield-check"></i>
+                </div>
+                <h1 class="h1s">Automated Workflows</h1>
+                <p class="p1s">Enterprise-grade security measures to protect your data and maintain compliance standards</p>
+              </div>
+                            <div class="serff">
+                <div class="serfff">
+                  <i class="bi bi-shield-check"></i>
+                </div>
+                <h1 class="h1s">Automated Workflows</h1>
+                <p class="p1s">Enterprise-grade security measures to protect your data and maintain compliance standards</p>
+              </div>
+            </div>
+
+          </div>
+
+        </section>
+        <!--End Service -->
+
     </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
