--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
 
             <div class="serb col-lg-6">
-              <div class="serff">
+              <div class="serff" >
                 <div class="serfff">
                   <i class="bi bi-shield-check"></i>
                 </div>
@@ -240,6 +240,10 @@
                 </div>
                 <h1 class="h1s">Automated Workflows</h1>
                 <p class="p1s">Enterprise-grade security measures to protect your data and maintain compliance standards</p>
+                <a href="#" class="hh1">
+                  <span>gssgshshs</span>
+                  <i id="hh1" class="bi bi-arrow-right"></i>
+                </a>
               </div>
                             <div class="serff">
                 <div class="serfff">
@@ -258,10 +262,125 @@
             </div>
 
           </div>
+          <!-- Tab links -->
+<div class="tab m-4">
+  <button class="tablinks" onclick="openCity(event, 'London')">Development</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Marketing</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Support</button>
+</div>
+
+<!-- Tab content -->
+<div id="London" class="tabcontent">
+  <div class="tabc">
+    <div class="tabc1">
+      <div class="tabch">
+               <div class="bihed">
+                  <i class="bi bi-laptop hedset"></i>
+                </div>
+                </div>
+                <h1 class="h1ss">Web Development</h1>
+                <p class="p1ss">Round-the-clock technical support to ensure your systems run smoothly at all times.</p>
+                <button class="btnview">View Details</button>
+    </div>
+        <div class="tabc1">
+      <div class="tabch">
+               <div class="bihed">
+                  <i class="bi bi-phone hedset"></i>
+                </div>
+                </div>
+                <h1 class="h1ss">Mobile Apps</h1>
+                <p class="p1ss">Round-the-clock technical support to ensure your systems run smoothly at all times.</p>
+                <button class="btnview">View Details</button>
+    </div>
+        <div class="tabc1">
+      <div class="tabch">
+               <div class="bihed">
+                  <i class="bi bi-server hedset"></i>
+                </div>
+                </div>
+                <h1 class="h1ss">API Development</h1>
+                <p class="p1ss">Round-the-clock technical support to ensure your systems run smoothly at all times.</p>
+                <button class="btnview">View Details</button>
+    </div>
+  </div>
+</div>
+
+<div id="Paris" class="tabcontent">
+  <div class="tabc">
+    <div class="tabc1">
+      <div class="tabch">
+               <div class="bihed">
+                  <i class="bi bi-megaphone hedset"></i>
+                </div>
+                </div>
+                <h1 class="h1ss">Digital Campaigns</h1>
+                <p class="p1ss">Round-the-clock technical support to ensure your systems run smoothly at all times.</p>
+                <button class="btnview">View Details</button>
+    </div>
+        <div class="tabc1">
+      <div class="tabch">
+               <div class="bihed">
+                  <i class="bi bi-search hedset"></i>
+                </div>
+                </div>
+                <h1 class="h1ss">SEO Optimization</h1>
+                <p class="p1ss">Round-the-clock technical support to ensure your systems run smoothly at all times.</p>
+                <button class="btnview">View Details</button>
+    </div>
+        <div class="tabc1">
+      <div class="tabch">
+               <div class="bihed">
+                  <i class="bi bi-share hedset"></i>
+                </div>
+                </div>
+                <h1 class="h1ss">Social Media</h1>
+                <p class="p1ss">Round-the-clock technical support to ensure your systems run smoothly at all times.</p>
+                <button class="btnview">View Details</button>
+    </div>
+  </div>
+</div>
+
+<div id="Tokyo" class="tabcontent">
+  <div class="tabc">
+    <div class="tabc1">
+      <div class="tabch">
+               <div class="bihed">
+                  <i class="bi bi-headset hedset"></i>
+                </div>
+                </div>
+                <h1 class="h1ss">24/7 Support</h1>
+                <p class="p1ss">Round-the-clock technical support to ensure your systems run smoothly at all times.</p>
+                <button class="btnview">View Details</button>
+    </div>
+        <div class="tabc1">
+      <div class="tabch">
+               <div class="bihed">
+                  <i class="bi bi-tools hedset"></i>
+                </div>
+                </div>
+                <h1 class="h1ss">System Maintenance</h1>
+                <p class="p1ss">Round-the-clock technical support to ensure your systems run smoothly at all times.</p>
+                <button class="btnview">View Details</button>
+    </div>
+        <div class="tabc1">
+      <div class="tabch">
+               <div class="bihed">
+                  <i class="bi bi-person-check hedset"></i>
+                </div>
+                </div>
+                <h1 class="h1ss">Training</h1>
+                <p class="p1ss">Round-the-clock technical support to ensure your systems run smoothly at all times.</p>
+                <button class="btnview">View Details</button>
+    </div>
+  </div>
+</div>
 
         </section>
         <!--End Service -->
-
+        <!--Start Features -->
+        <section class="Features container">
+          <div></div>
+        </section>
     </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
