--- a/index.html
+++ b/index.html
@@ -379,7 +379,100 @@
         <!--End Service -->
         <!--Start Features -->
         <section class="Features container">
-          <div></div>
+          <div class="container">
+            <div class="fheader">
+              <h2 class="hfe">FEATURES</h2>
+              <p class="phe">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+            </div>
+            <div class="fcon">
+              <div class="fcon2">
+                <div class="fcon2c">
+                  <h3>Voluptatum deleniti atque corrupti quos dolores</h3>
+                  <p class="fcp">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus</p>
+                </div>
+              </div>
+              <div class="fcon1">
+                <div class="fcimg"><img class="fimg" src="about-7.webp" alt=""></div>
+              </div>
+            </div>
+
+            <div class="fwrap">
+              <div class="fwrapc">
+                <div class="fwrapi"><i class="bi bi-laptop fwrapii"></i></div>
+                <div>
+                  <h3>Expedita Voluptas</h3>
+                  <p class="fwp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</p>
+                </div>
+              </div>
+                <div class="fwrapc">
+                <div class="fwrapi"><i class="bi bi-lightning-charge fwrapii"></i></div>
+                <div>
+                  <h3>Expedita Voluptas</h3>
+                  <p class="fwp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</p>
+                </div>
+              </div>
+                <div class="fwrapc">
+                <div class="fwrapi"><i class="bi bi-laptop fwrapii"></i></div>
+                <div>
+                  <h3>Nemo Quisquk</h3>
+                  <p class="fwp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</p>
+                </div>
+              </div>
+                <div class="fwrapc">
+                <div class="fwrapi"><i class="bi bi-gem fwrapii"></i></div>
+                <div>
+                  <h3>Beatae Vitae</h3>
+                  <p class="fwp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</p>
+                </div>
+              </div>
+            </div>
+            <div class="fw1">
+              <div class="fwc">
+                <div class="fwci"><i class="bi bi-laptop fwcii"></i></div>
+                <div class="">
+                  <h3>AI-Powered Automation</h3>
+                  <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                  <div class="fwcb">
+                    <span class="fsp">smart</span>
+                    <span class="fsp">automated</span>
+                  </div>
+                </div>
+              </div>
+                            <div class="fwc">
+                <div class="fwci"><i class="bi bi-laptop fwcii"></i></div>
+                <div class="">
+                  <h3>AI-Powered Automation</h3>
+                  <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                  <div class="fwcb">
+                    <span class="fsp">smart</span>
+                    <span class="fsp">automated</span>
+                  </div>
+                </div>
+              </div>
+                            <div class="fwc">
+                <div class="fwci"><i class="bi bi-laptop fwcii"></i></div>
+                <div class="">
+                  <h3>AI-Powered Automation</h3>
+                  <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                  <div class="fwcb">
+                    <span class="fsp">smart</span>
+                    <span class="fsp">automated</span>
+                  </div>
+                </div>
+              </div>
+                            <div class="fwc">
+                <div class="fwci"><i class="bi bi-laptop fwcii"></i></div>
+                <div class="">
+                  <h3>AI-Powered Automation</h3>
+                  <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                  <div class="fwcb">
+                    <span class="fsp">smart</span>
+                    <span class="fsp">automated</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
     </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
