--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                   </div>
                 </div>
               </div>
-                            <div class="fwc">
+              <div class="fwc">
                 <div class="fwci"><i class="bi bi-laptop fwcii"></i></div>
                 <div class="">
                   <h3>AI-Powered Automation</h3>
@@ -470,6 +470,300 @@
                     <span class="fsp">automated</span>
                   </div>
                 </div>
+              </div>
+            </div>
+            <div class="fwcl">
+              <button class="fwcl1">Get Started Today</button>
+              <button class="fwcl2"> View Demo </button>
+            </div>
+          </div>
+        </section>
+
+        <section class="testimonials">
+          <div class="container">
+            <div class="testh">
+              <h2 class="the">Testimonials</h2>
+              <p class="tpe">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            </div>
+            <div class="testc">
+              <div class="testc1">
+                <div class="testci">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <blockquote class="testcb">
+                  "The platform's intuitive design has streamlined our workflow and boosted team productivity by 40%. The automation features are game-changing."
+                </blockquote>
+                <div class="testlast">
+                  <div class="testlasti"><img class="testlastii" src="about-14.webp" alt=""></div>
+                  <div class="testlastc">
+                    <h4 class="testlasth">Sarah Williams</h4>
+                    <span class="testlastp">Product Manger</span>
+                    <div class="testlastd">teachflow inc</div>
+                  </div>
+                </div>
+              </div>
+              <div class="testc1" id="testc1">
+                <div class="totest"><i class="bi bi-award-fill"></i><span>Top Review</span></div>
+                <div class="testci">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <blockquote class="testcb">
+                  "Outstanding customer support and feature-rich platform. The analytics dashboard provides incredible insights that have transformed our decision-making process completely."
+                </blockquote>
+                <div class="testlast">
+                  <div class="testlasti"><img class="testlastii" src="about-14.webp" alt=""></div>
+                  <div class="testlastc">
+                    <h4 class="testlasth">Sarah Williams</h4>
+                    <span class="testlastp">Product Manger</span>
+                    <div class="testlastd">teachflow inc</div>
+                  </div>
+                </div>
+              </div>
+                            <div class="testc1">
+                <div class="testci">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <blockquote class="testcb">
+                  "The platform's intuitive design has streamlined our workflow and boosted team productivity by 40%. The automation features are game-changing."
+                </blockquote>
+                <div class="testlast">
+                  <div class="testlasti"><img class="testlastii" src="about-14.webp" alt=""></div>
+                  <div class="testlastc">
+                    <h4 class="testlasth">Sarah Williams</h4>
+                    <span class="testlastp">Product Manger</span>
+                    <div class="testlastd">teachflow inc</div>
+                  </div>
+                </div>
+              </div>
+                            <div class="testc1">
+                <div class="testci">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <blockquote class="testcb">
+                  "The platform's intuitive design has streamlined our workflow and boosted team productivity by 40%. The automation features are game-changing."
+                </blockquote>
+                <div class="testlast">
+                  <div class="testlasti"><img class="testlastii" src="about-14.webp" alt=""></div>
+                  <div class="testlastc">
+                    <h4 class="testlasth">Sarah Williams</h4>
+                    <span class="testlastp">Product Manger</span>
+                    <div class="testlastd">teachflow inc</div>
+                  </div>
+                </div>
+              </div>
+                            <div class="testc1">
+                <div class="testci">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <blockquote class="testcb">
+                  "The platform's intuitive design has streamlined our workflow and boosted team productivity by 40%. The automation features are game-changing."
+                </blockquote>
+                <div class="testlast">
+                  <div class="testlasti"><img class="testlastii" src="about-14.webp" alt=""></div>
+                  <div class="testlastc">
+                    <h4 class="testlasth">Sarah Williams</h4>
+                    <span class="testlastp">Product Manger</span>
+                    <div class="testlastd">teachflow inc</div>
+                  </div>
+                </div>
+              </div>
+                            <div class="testc1">
+                <div class="testci">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
+                <blockquote class="testcb">
+                  "The platform's intuitive design has streamlined our workflow and boosted team productivity by 40%. The automation features are game-changing."
+                </blockquote>
+                <div class="testlast">
+                  <div class="testlasti"><img class="testlastii" src="about-14.webp" alt=""></div>
+                  <div class="testlastc">
+                    <h4 class="testlasth">Sarah Williams</h4>
+                    <span class="testlastp">Product Manger</span>
+                    <div class="testlastd">teachflow inc</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="pricing">
+          <div class="container">
+            <div class="testh">
+              <h2 class="the">Pricing</h2>
+              <p class="tpe">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            </div>
+            <div class="pric1">
+              <div class="pricc">
+                <div class="priche">
+                <div class="priche1"><div class="prici"><i class="bi bi-laptop"></i></div></div>
+                <h4>Starter</h4>
+                <p>For individuals just getting started</p>
+                </div>
+                <div class="pricecc">
+                  <div class="pricel">
+                    <span class="ppl1">$</span>
+                    <span class="ppl2">12</span>
+                    <span class="ppl3">/month</span>
+                  </div>
+                </div>
+                <div class="pricr">
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-x-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-x-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-x-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                </div>
+                <div class="priclast"><button class="pricelast1">Chose Plan</button></div>
+              </div>
+                            <div class="pricc" id="prbb">
+                <div class="priche">
+                <div class="priche1"><div class="prici"><i class="bi bi-briefcase"></i></div></div>
+                <h4>Pofisonnal</h4>
+                <p>For individuals just getting started</p>
+                </div>
+                <div class="pricecc">
+                  <div class="pricel">
+                    <span class="ppl1">$</span>
+                    <span class="ppl2">39</span>
+                    <span class="ppl3">/month</span>
+                  </div>
+                </div>
+                <div class="pricr">
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-x-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-x-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                </div>
+                <div class="priclast"><button class="pricelast1">Chose Plan</button></div>
+              </div>
+                        <div class="pricc">
+                <div class="priche">
+                <div class="priche1"><div class="prici"><i class="bi bi-building"></i></div></div>
+                <h4>Enterprice</h4>
+                <p>For individuals just getting started</p>
+                </div>
+                <div class="pricecc">
+                  <div class="pricel">
+                    <span class="ppl1">$</span>
+                    <span class="ppl2">79</span>
+                    <span class="ppl3">/month</span>
+                  </div>
+                </div>
+                <div class="pricr">
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-check-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                  <div class="pricrr"><i class="bi bi-x-circle-fill"></i><span>Nullam accumsan lorem</span></div>
+                </div>
+                <div class="priclast"><button class="pricelast1">Chose Plan</button></div>
+              </div>
+            </div>
+            <div class="container">
+              <div class="sell">
+                <div class="sell1">
+                <div class="selli"><i class="bi bi-patch-question"></i></div>
+                <div class="sellc">
+                  <h5>Consectetur adipiscing elit pellentesque habitant morbi tristique?</h5>
+                  <p>Mauris augue neque gravida in fermentum et sollicitudin ac orci. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Sed felis eget velit aliquet sagittis id consectetur purus ut.</p>
+                </div>
+                </div>
+              </div>
+                            <div class="sell">
+                <div class="sell1">
+                <div class="selli"><i class="bi bi-patch-question"></i></div>
+                <div class="sellc">
+                  <h5>Consectetur adipiscing elit pellentesque habitant morbi tristique?</h5>
+                  <p>Mauris augue neque gravida in fermentum et sollicitudin ac orci. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Sed felis eget velit aliquet sagittis id consectetur purus ut.</p>
+                </div>
+                </div>
+              </div>
+                            <div class="sell">
+                <div class="sell1">
+                <div class="selli"><i class="bi bi-patch-question"></i></div>
+                <div class="sellc">
+                  <h5>Consectetur adipiscing elit pellentesque habitant morbi tristique?</h5>
+                  <p>Mauris augue neque gravida in fermentum et sollicitudin ac orci. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Sed felis eget velit aliquet sagittis id consectetur purus ut.</p>
+                </div>
+                </div>
+              </div>
+                            <div class="sell">
+                <div class="sell1">
+                <div class="selli"><i class="bi bi-patch-question"></i></div>
+                <div class="sellc">
+                  <h5>Consectetur adipiscing elit pellentesque habitant morbi tristique?</h5>
+                  <p>Mauris augue neque gravida in fermentum et sollicitudin ac orci. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Sed felis eget velit aliquet sagittis id consectetur purus ut.</p>
+                </div>
+                </div>
+              </div>
+                            <div class="sell">
+                <div class="sell1">
+                <div class="selli"><i class="bi bi-patch-question"></i></div>
+                <div class="sellc">
+                  <h5>Consectetur adipiscing elit pellentesque habitant morbi tristique?</h5>
+                  <p>Mauris augue neque gravida in fermentum et sollicitudin ac orci. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Sed felis eget velit aliquet sagittis id consectetur purus ut.</p>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="contact">
+          <div class="container">
+            <h2 class="the">Contact</h2>
+              <p class="tpe">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            </div>
+            <div class="contactm">
+              <div class="con1"></div>
+              <div class="con2">
+<form>
+  <div class="mb-3">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="mb-3">
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+    <div class="mb-3">
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+    <div class="mb-3">
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+    <div class="mb-3">
+    <textarea  id="comments"></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
               </div>
             </div>
           </div>
