--- a/index.html
+++ b/index.html
@@ -740,34 +740,106 @@
 
         <section class="contact">
           <div class="container">
+            <div class="testh">
             <h2 class="the">Contact</h2>
               <p class="tpe">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
             </div>
             <div class="contactm">
-              <div class="con1"></div>
+              <div class="con1">
+                <div class="con11">
+                  <div class="con111">
+                    <h2>Ready to Connect?</h2>
+                    <p class="con1111">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                  </div>
+                  <div class="con1c">
+                    <div class="con1ci"><i class="bi bi-house-door concii"></i></div>
+                    <div class="concc">
+                      <h4>Visit Our Office</h4>
+                      <p>1247 Central Park West <br>New York, NY 10024</p>
+                    </div>
+                  </div>
+                                    <div class="con1c">
+                    <div class="con1ci"><i class="bi bi-chat-dots concii"></i></div>
+                    <div class="concc">
+                      <h4>Send Us A message</h4>
+                      <p>1247 Central Park West <br>New York, NY 10024</p>
+                    </div>
+                  </div>
+                                    <div class="con1c">
+                    <div class="con1ci"><i class="bi bi-headset concii"></i></div>
+                    <div class="concc">
+                      <h4>Visit Our Office</h4>
+                      <p>1247 Central Park West <br>New York, NY 10024</p>
+                    </div>
+                  </div>
+                                    <div class="con1c">
+                    <div class="con1ci"><i class="bi bi-calendar3 concii"></i></div>
+                    <div class="concc">
+                      <h4>BUSNIESS HOUR</h4>
+                      <p>Mon-Fri: 8AM-7PM <br> Weekends: By Appointment</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="conlas">
+                  <div class="conlash"><h5>Follow Our Juorney</h5></div>
+                  <div class="conlashc">
+                  <div class="conlasi">
+                    <div class="conlast"><i class="bi bi-facebook conlasti"></i></div>
+                  </div>
+                                    <div class="conlasi">
+                    <div class="conlast"><i class="bi bi-twitter-x conlasti"></i></div>
+                  </div>
+                                    <div class="conlasi">
+                    <div class="conlast"><i class="bi bi-linkedin conlasti"></i></div>
+                  </div>
+                                    <div class="conlasi">
+                    <div class="conlast"><i class="bi bi-instagram conlasti"></i></div>
+                  </div>
+                  </div>
+                </div>
+
+              </div>
               <div class="con2">
-<form>
-  <div class="mb-3">
+                <div class="headform"> Drop Us a line</div>
+<form >
+  <div class="formg">
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
   </div>
-  <div class="mb-3">
-    <input type="password" class="form-control" id="exampleInputPassword1">
+  <div class="formg">
+    <input type="text" class="form-control" id="exampleInputPassword1">
   </div>
-    <div class="mb-3">
-    <input type="password" class="form-control" id="exampleInputPassword1">
+  <div class="formg">
+    <input type="text" class="form-control" id="exampleInputPassword1">
   </div>
-    <div class="mb-3">
-    <input type="password" class="form-control" id="exampleInputPassword1">
+  <div class="formg">
+    <input type="tex" class="form-control" id="exampleInputPassword1">
   </div>
-    <div class="mb-3">
-    <textarea  id="comments"></textarea>
+  <div class="formg">
+    <textarea  id="comments" class="form-control"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="submit">Send Message <i class="bi bi-arrow-right"></i></button>
 </form>
               </div>
             </div>
           </div>
         </section>
+
+        <footer class="footer">
+          <div class="container">
+            <div class="foot row align-items-start">
+              <div class="foot1 col-lg-5">
+                <div>
+                  <a href="#" class="foota">Mydesgin</a>
+                  <p class="footp">Crafting exceptional digital experiences through thoughtful design and innovative solutions that elevate your brand presence.</p>
+                  <div class="footlast">
+                    <div class="footi"><i class="bi bi-geo-alt foooi"></i><span>123 Creative Boulevard, Design District, NY 10012</span></div>
+                  </div>
+                </div>
+              </div>
+              <div class="foot2 col-lg-7"></div>
+            </div>
+          </div>
+        </footer>
     </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
