--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
           </button>
           <ul class="dropdown-menu " id="dropm1">
             <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
             <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
       <ul class="navbar-nav">
         <li class="nav-item dropdown" id="drop2">
@@ -56,7 +55,8 @@
         </li>
       </ul>
     </div>
-            <li><a class="dropdown-item mx-1" href="#">Something else here</a></li>
+            <li><a class="dropdown-item " href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
           </ul>
         </li>
       </ul>
@@ -80,8 +80,8 @@
           <div class="row justify-content-center">
             <div class="col-lg-8">
               <div class="row justify-content-center">
-                <div class="headera bg-primary rounded-pill">
-                 <i class="bi bi-star-fill">
+                <div class="headera rounded-pill">
+                 <i class="bi bi-star-fill firsts">
                   <span id="spaw">Award winnig agency</span>
                 </i>
                 </div>
@@ -832,11 +832,94 @@
                   <a href="#" class="foota">Mydesgin</a>
                   <p class="footp">Crafting exceptional digital experiences through thoughtful design and innovative solutions that elevate your brand presence.</p>
                   <div class="footlast">
-                    <div class="footi"><i class="bi bi-geo-alt foooi"></i><span>123 Creative Boulevard, Design District, NY 10012</span></div>
+                    <div class="footi"><i class="bi bi-geo-alt foooi"></i><span class="footsp">123 Creative Boulevard, Design District, NY 10012</span></div>
+                    <div class="footi"><i class="bi bi-telephone foooi"></i><span class="footsp">+ 249 966525580</span></div>
+                    <div class="footi"><i class="bi bi-envelope foooi"></i><span class="footsp">hosaamdaffala09620@gmail.com</span></div>
                   </div>
                 </div>
               </div>
-              <div class="foot2 col-lg-7"></div>
+              <div class="foot2 col-lg-7">
+                <div class="row foot22">
+                  <div class="col-lg-3">
+                    <div class="footnav">
+                      <h6>studio</h6>
+                      <nav class="footnavc">
+                        <a href="#" class="afoo">Our Story</a>
+                        <a href="#" class="afoo">Desgin Process</a>
+                        <a href="#" class="afoo">Portfolio</a>
+                        <a href="#" class="afoo">Case Studio</a>
+                        <a href="#" class="afoo">Awards</a>
+                      </nav>
+                    </div>
+                  </div>
+                                    <div class="col-lg-3">
+                    <div class="footnav">
+                      <h6>Service</h6>
+                      <nav class="footnavc">
+                        <a href="#" class="afoo">Our Story</a>
+                        <a href="#" class="afoo">Web Desgin</a>
+                        <a href="#" class="afoo">Mobile App</a>
+                        <a href="#" class="afoo">Case Studio</a>
+                        <a href="#" class="afoo">Consolution</a>
+                      </nav>
+                    </div>
+                  </div>
+                                    <div class="col-lg-3">
+                    <div class="footnav">
+                      <h6>Resurces</h6>
+                      <nav class="footnavc">
+                        <a href="#" class="afoo">Style Guide</a>
+                        <a href="#" class="afoo">Totorial</a>
+                        <a href="#" class="afoo">Inspiration</a>
+                        <a href="#" class="afoo">Free Assits</a>
+                        <a href="#" class="afoo">Awards</a>
+                      </nav>
+                    </div>
+                  </div>
+                  <div class="col-lg-3">
+                    <div class="footnav">
+                      <h6>Connect</h6>
+                      <nav class="footnavc">
+                        <a href="#" class="afoo">Our Story</a>
+                        <a href="#" class="afoo">Desgin Process</a>
+                        <a href="#" class="afoo">Portfolio</a>
+                        <a href="#" class="afoo">Follow Abdate</a>
+                        <a href="#" class="afoo">Awards</a>
+                      </nav>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="footermid row align-items-center">
+              <div class="footermid1 col-lg-6">
+                <h4>Stay Inspired</h4>
+                <p>Subscribe to receive design insights and creative inspiration delivered monthly.</p>
+              </div>
+              
+                <div class="footermid2 col-lg-6">
+                  <div class="footermid22"><i class="bi bi-dribbble footermidi"></i><span class="footermids">Dribbble</span></div>
+                  <div class="footermid22"><i class="bi bi-behance footermidi"></i><span class="footermids">Behance</span></div>
+                  <div class="footermid22"><i class="bi bi-instagram footermidi"></i><span class="footermids">Instagram</span></div>
+                  <div class="footermid22"><i class="bi bi-linkedin footermidi"></i><span class="footermids">Linkedin</span></div>
+                
+              </div>
+            </div>
+          </div>
+          <div class="footerbottom">
+            <div class="container">
+              <div class="row footerboot">
+                <div class="col-lg-6 footbootpp"><p class="footerbootp">© <span class="sitenb"> Mydesgin. </span>All rights reserved</p></div>
+                <div class="col-lg-6 lass">
+                  <div class="lastb">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of service</a>
+                    <a href="#">cookiy Policy</a>
+                  </div>
+                  <div class="lastbb"> DesginedBy <a href="#" class="lasta">HussamDaffala</a></div>
+                </div>
+              </div>
             </div>
           </div>
         </footer>
