--- a/index.html
+++ b/index.html
@@ -14,68 +14,38 @@
 </head>
 <body>
   <!--nvbar section-->
-    <nav class="navbar navbar-expand-lg align-items-center m-2 d-flex fixed-top">
-        <div class="navmain shadow container-fluid container-xl d-flex position-relative bg-body-tertiary rounded-pill p-4 align-items-center">
-           <a class="navbar-brand" href="#">Mydesign</a>
-               <div class="coll collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
-
-        <li class="nav-item mx-1">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item mx-1">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item mx-1">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item mx-1">
-          <a class="nav-link " href="#">Servuce</a>
-        </li>
-        <li class="nav-item mx-1">
-          <a class="nav-link " href="#">Pricing</a>
-        </li>
-        <li class="nav-item mx-1">
-
-              <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown" id="drop1">
-          <button class="btn dropdown-toggle" id="dropmenu1" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </button>
-          <ul class="dropdown-menu " id="dropm1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown" id="drop2">
-          <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown 
-          </button>
-          <ul class="dropdown-menu " id="dropm2">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-            <li><a class="dropdown-item " href="#">Something else here</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-<!-- End dropdown-->
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="#">Contact</a>
-        </li>
-      </ul>
-      
-    </div>
-    <button type="button" class="btn btn-primary justify-content-end rounded-pill">Get Started</button>
+    <div class="navbar">
+        <div class="navmain shadow container">
+          <a href="#" class="navname">Mydesgin</a>
+          <nav class=" navmainh">
+            <ul class="navmainc">
+              <li>
+                <a href="#" class="nav-link">Home</a>
+              </li>
+                            <li>
+                <a href="#" class="nav-link">About</a>
+              </li>
+                            <li>
+                <a href="#" class="nav-link">Price</a>
+              </li>
+                            <li>
+                <a href="#" class="nav-link">Fetu</a>
+              </li>
+                            <li>
+                <a href="#" class="nav-link">sss</a>
+              </li>
+                            <li>
+                <a href="#" class="nav-link">contact</a>
+              </li>
+                                          <li>
+                <a href="#" class="nav-link">contact</a>
+              </li>
+            </ul>
+          </nav>
+          <button class="butnav">Get Started</button>
+          <div class="clickh">click</div>
         </div>
-    </nav>
+      </div>
     <!-- Navbar end-->
 <!-- Main Section -->
     <div class="main">
