--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!--nvbar section-->
     <div class="navbar">
-        <div class="navmain shadow container">
+        <div class="navmain shadow container-md container">
           <a href="#" class="navname">Mydesgin</a>
           <nav class=" navmainh">
             <ul class="navmainc">
@@ -43,7 +43,7 @@
             </ul>
           </nav>
           <button class="butnav">Get Started</button>
-          <div class="clickh">click</div>
+          <i class="clickh bi bi-list"></i>
         </div>
       </div>
     <!-- Navbar end-->
@@ -173,7 +173,7 @@
             <h1 class="serh">Service</h1>
             <p class="serp">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
           </div>
-          <div class="row">
+          <div class="row serr">
             <div class="ser col-lg-6  aos-a ani-fadeup">
               <div class="serf">
               <div class="serft">Most Pupular</div>
@@ -200,7 +200,7 @@
               </div>
             </div>
 
-            <div class="serb col-lg-6">
+            <div class="serb">
               <div class="serff aos-a ani-fadeup" >
                 <div class="serfff">
                   <i class="bi bi-shield-check"></i>
@@ -592,7 +592,7 @@
               <p class="tpe">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
             </div>
             <div class="pric1">
-              <div class="pricc aos-a ani-zoomin">
+              <div class="pricc col-lg-4 col-md-6 aos-a ani-zoomin">
                 <div class="priche">
                 <div class="priche1"><div class="prici"><i class="bi bi-laptop"></i></div></div>
                 <h4>Starter</h4>
@@ -615,7 +615,7 @@
                 </div>
                 <div class="priclast"><button class="pricelast1">Chose Plan</button></div>
               </div>
-                            <div class="pricc aos-a ani-zoomin" id="prbb">
+                            <div class="pricc col-lg-4 col-md-6 aos-a ani-zoomin" id="prbb">
                 <div class="priche">
                 <div class="priche1"><div class="prici"><i class="bi bi-briefcase"></i></div></div>
                 <h4>Pofisonnal</h4>
@@ -638,7 +638,7 @@
                 </div>
                 <div class="priclast"><button class="pricelast1">Chose Plan</button></div>
               </div>
-                        <div class="pricc aos-a ani-zoomin">
+                        <div class="pricc col-lg-4 col-md-6 aos-a ani-zoomin">
                 <div class="priche">
                 <div class="priche1"><div class="prici"><i class="bi bi-building"></i></div></div>
                 <h4>Enterprice</h4>
