--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
               </div>
               <div class="foot2 col-lg-7">
                 <div class="row foot22">
-                  <div class="col-lg-3">
+                  <div class="footll col-lg-3">
                     <div class="footnav">
                       <h6>studio</h6>
                       <nav class="footnavc">
@@ -826,7 +826,7 @@
                       </nav>
                     </div>
                   </div>
-                                    <div class="col-lg-3">
+                                    <div class="footll col-lg-3">
                     <div class="footnav">
                       <h6>Service</h6>
                       <nav class="footnavc">
@@ -838,7 +838,7 @@
                       </nav>
                     </div>
                   </div>
-                                    <div class="col-lg-3">
+                                    <div class="footll col-lg-3">
                     <div class="footnav">
                       <h6>Resurces</h6>
                       <nav class="footnavc">
@@ -850,7 +850,7 @@
                       </nav>
                     </div>
                   </div>
-                  <div class="col-lg-3">
+                  <div class="footll col-lg-3">
                     <div class="footnav">
                       <h6>Connect</h6>
                       <nav class="footnavc">
